<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:maxLines="1" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />
</PreferenceScreen>
